Update Predicting pokemon using knn and keras.ipynb

--- a/Predicting pokemon using knn and keras.ipynb
+++ b/Predicting pokemon using knn and keras.ipynb
@@ -329,7 +329,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# What is dataset = 149 ?"
+    "# What is dataset = 149 ?\n",
+    "# so I check it it a bit redundant folder so let remove it"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pk_list = sorted(counts.items(), key = lambda x: x[1], reverse = True)\n",
+    "del pk_list[6]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Mewtwo', 307), ('Pikachu', 298), ('Charmander', 296), ('Bulbasaur', 289), ('Squirtle', 280), ('Psyduck', 159), ('Spearow', 130)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "imbalanced = pk_list[:7]\n",
+    "print(imbalanced)"
    ]
   },
   {
