Update Predicting pokemon using knn and keras.ipynb

--- a/Predicting pokemon using knn and keras.ipynb
+++ b/Predicting pokemon using knn and keras.ipynb
@@ -346,7 +346,9 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -363,10 +365,42 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imbalanced = [i[0] for i in imbalanced]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# time to read all images and add them to list:\n",
+    "X = []\n",
+    "y = []\n",
+    "\n",
+    "# Loop through all classes\n",
+    "for c in classes:\n",
+    "    #take only classes that defined in imbalanced list\n",
+    "    if c in imbalanced:\n",
+    "        dir_path = os.path.join(path, c)\n",
+    "        label = imbalanced.index(c)\n",
+    "        \n",
+    "        # Reading, Resizing and adding image and labels to lists.\n",
+    "        for i in os.listdir(dir_path):\n",
+    "            image = cv.imread(os.path.join(dir_path, 1))\n",
+    "            \n",
+    "            try:\n",
+    "                resized = cv.resize(image, (96, 96)) # Resizing image to (96, 96)\n",
+    "                X.append(resized)\n",
+    "                y.append(label)\n",
+    "                \n",
+    "            except:\n",
+    "                print(os.path.join(dir_path, i), '[Error]')"
+   ]
   }
  ],
  "metadata": {
